# rFactor2_engineer

./: .dockerignore  .gitignore  AGENTS.md  ASANA.md  ASANA_CONSTANTS.md  CONSTANTS.md  Cargo.toml  Dockerfile  GIT.md  JIMMY.md  LLM_CONSTANTS.md  NETWORK_CONSTANTS.md  PARSING_CONSTANTS.md  README.md  ROADMAP.md  SETUP_CONSTANTS.md  SPEC.md  SPECIFICATION.md  SPEC_AI_ARCHITECTURE.md  SPEC_AUTH.md  SUBAGENT.md  SUPERVISOR.md  asana_token.json  commitlint.config.js  docker-compose.yml  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: .copilot-instructions.md
.husky/: pre-commit
.streamlit/: config.toml
app/: AGENTS.md  asana_mcp_oauth2.py  asana_oauth2_test.py  asana_token_manager.py  debug_mcp_bytes.py  decode_mcp_token.py  main.py  test_mcp_create_session.py  test_mcp_create_session_fixed.py  test_mcp_create_session_with_header.py  test_mcp_exhaustive.py  test_mcp_post.py  test_mcp_sse_then_create.py  test_mcp_try_client_id.py  test_mcp_url_variants.py
crates/ld_parser/: Cargo.toml
crates/ld_parser/src/: channel.rs  domain.rs  error.rs  header.rs  lib.rs  memory.rs  types.rs  utils.rs  wasm.rs
crates/ld_parser/tests/fixtures/: README.md  bad_magic.ld  channel_unknown_type.ld  minimal_valid_ld3.ld  unsupported_version.ld
deploy/: .htpasswd  docker-compose.gcp.yml  nginx-rfactor2_engineer.conf
docs/: asana-workflow.md  deployment.md  git-setup.md  ld_format_research.md  openapi.yaml  product-spec.md  release_checklist.md
frontend/: AGENTS.md  api_client.py  config.py  session_manager.py  setup_parser.py  (+2 more)
(+279 files in other folders)
