[package]
name = "ld_parser"
version = "0.1.0"
edition = "2021"
description = "Zero-copy MoTeC .ld binary parser for WebAssembly"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "7"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
# No additional dev deps — fixtures are plain byte arrays checked in under tests/fixtures/

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
